<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigationDrawer"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/skolan_app"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/menuHome"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/hem"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/menuNews"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/nyheter"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/menuBirthdays"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/fodelsedagar"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/menuCalendar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/kalender"
        android:textSize="18sp" />

</LinearLayout>